tests/ui/bitfield/field_out_of_bounds_primitive.stderr
error[E0080]: evaluation of constant value failed
 --> $DIR/field_out_of_bounds_primitive.rs:5:1
  |
5 | #[bitfield::bitfield(size)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ attempt to compute `0_usize - 1_usize`, which would overflow
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
